--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>de.tinycodecrank</groupId>
-  <artifactId>Monads</artifactId>
-  <version>1.0.0</version>
-  <name>tinyMonads</name>
-  <description>some useful Monads for java</description>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>de.tinycodecrank</groupId>
+	<artifactId>Monads</artifactId>
+	<version>1.0.0</version>
+	<name>tinyMonads</name>
+	<description>some useful Monads for java</description>
 
 	<distributionManagement>
 		<repository>
@@ -20,29 +20,36 @@
 		<java.version>18</java.version>
 	</properties>
 	
+	<repositories>
+		<repository>
+			<id>github</id>
+			<url>https://maven.pkg.github.com/tinycodecrank/package_registry</url>
+		</repository>
+	</repositories>
+	
 	<dependencies>
-		<dependency>
-			<groupId>de.tinycodecrank</groupId>
-			<artifactId>tiny_iterators</artifactId>
-			<version>1.0.0</version>
-		</dependency>
 		<dependency>
 			<groupId>de.tinycodecrank</groupId>
 			<artifactId>better_functionals</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>de.tinycodecrank</groupId>
+			<artifactId>tiny_iterators</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
   
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <release>18</release>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<release>18</release>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
