--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<distributionManagement>
 		<repository>
-			<id>github</id>
+			<id>github_tiny_monads</id>
 			<name>GitHub tinycodecrank Apache Maven Packages</name>
 			<url>https://maven.pkg.github.com/tinycodecrank/tinyMonads</url>
 		</repository>
