--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -17,6 +17,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    - name: echo settings.xml location
+      run:  echo $GITHUB_WORKSPACE
+    
     - name: Set up JDK 18
       uses: actions/setup-java@v3
       with:
