--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,9 +4,19 @@
 name: Maven Package
 
 on:
-  workflow_dispatch:
   release:
     types: [created]
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
 
 jobs:
   build:
@@ -28,10 +38,10 @@ jobs:
 
     - name: Build with Maven
       env:
-        GITHUB_TOKEN: ${{ secrets.PACKAGE_ACCESS_TINY_MONADS }}
-      run: mvn -e -B package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
+        GITHUB_TOKEN: ${{ secrets.MAVEN_REGISTRY_TOKEN }}
+      run: mvn -B package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
       env:
-        GITHUB_TOKEN: ${{ secrets.PACKAGE_ACCESS_TINY_MONADS }}
+        GITHUB_TOKEN: ${{ secrets.MAVEN_REGISTRY_TOKEN }}
