--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
 
 	<distributionManagement>
 		<repository>
-			<id>github_tiny_monads</id>
+			<id>github</id>
 			<name>GitHub tinycodecrank Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/tinycodecrank/tiny_monads</url>
+			<url>https://maven.pkg.github.com/tinycodecrank/maven-repo</url>
 		</repository>
 	</distributionManagement>
 
@@ -23,15 +23,7 @@
 	<repositories>
 		<repository>
 			<id>github</id>
-			<url>https://maven.pkg.github.com/tinycodecrank/package_registry</url>
-		</repository>
-		<repository>
-			<id>github_tiny_monads</id>
-			<url>https://maven.pkg.github.com/tinycodecrank/tiny_monads</url>
-		</repository>
-		<repository>
-			<id>github_better_functionals</id>
-			<url>https://maven.pkg.github.com/tinycodecrank/better_functionals</url>
+			<url>https://maven.pkg.github.com/tinycodecrank/maven-repo</url>
 		</repository>
 	</repositories>
 	
@@ -39,7 +31,7 @@
 		<dependency>
 			<groupId>de.tinycodecrank</groupId>
 			<artifactId>better_functionals</artifactId>
-			<version>1.0.0</version>
+			<version>2.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tinycodecrank</groupId>
