--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -33,7 +33,7 @@ jobs:
       with:
         java-version: '18'
         distribution: 'temurin'
-        server-id: github_tiny_monads # Value of the distributionManagement/repository/id field of the pom.xml
+        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
